--- a/Week-2/Exercise2.1.html
+++ b/Week-2/Exercise2.1.html
@@ -68,7 +68,7 @@
         <div class="inputs">
             <input type="checkbox"> <label>I agree to the <a href="#">terms and conditions</a></label>
         </div>
-        <input class="inputs" type="submit">Sign up</input>
+        <input class="inputs" type="submit"></input>
     </form>
 </body>
 </html>
